2012-02-24  Richard Guenther  <rguenther@suse.de>

PR middle-end/52361
	* passes.c (execute_function_todo): When verifying SSA form
	verify gimple form first.
	* tree-ssa.c (verify_ssa): Do not verify gimple form here.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@184549 138bc75d-0d04-0410-961f-82ee72b054a4